--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "prettier:check": "prettier --check .",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "pinia": "^3.0.1",
@@ -39,7 +41,7 @@
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
-    "prettier": "3.5.3",
+    "prettier": "^3.5.3",
     "start-server-and-test": "^2.0.11",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
