--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@primeuix/themes": "^1.0.3",
     "@primevue/core": "^4.3.3",
     "@primevue/themes": "^4.3.3",
+    "leaflet": "^1.9.4",
     "pinia": "^3.0.2",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
