--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@primeuix/themes": "^1.0.3",
     "@primevue/core": "^4.3.3",
     "@primevue/themes": "^4.3.3",
     "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.11.1",
     "pinia": "^3.0.2",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
