--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
     "serve": "^14.2.4",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-recaptcha-v3": "^2.0.1",
     "vue-router": "^4.5.0"
