--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@primeuix/themes": "^1.0.3",
     "@primevue/core": "^4.3.3",
+    "@primevue/forms": "^4.3.3",
     "@primevue/themes": "^4.3.3",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.11.1",
