--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@primeuix/themes": "^1.0.3",
     "@primevue/core": "^4.3.3",
     "@primevue/themes": "^4.3.3",
+    "@turf/turf": "^7.2.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.11.1",
     "pinia": "^3.0.2",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
     "@types/jsdom": "^21.1.7",
+    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
     "@types/node": "^22.14.1",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
