--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-recaptcha-v3": "^2.0.1",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-google-signin": "^2.1.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
