--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@primevue/core": "^4.3.3",
     "@primevue/forms": "^4.3.3",
     "@primevue/themes": "^4.3.3",
+    "@vueuse/integrations": "^13.1.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.11.1",
     "pinia": "^3.0.2",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
     "serve": "^14.2.4",
+    "universal-cookie": "^7.2.2",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-recaptcha-v3": "^2.0.1",
