--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@primevue/core": "^4.3.3",
     "@primevue/forms": "^4.3.3",
     "@primevue/themes": "^4.3.3",
+    "@types/chai": "^5.2.1",
     "@vueuse/integrations": "^13.1.0",
+    "cy": "^0.0.1",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.11.1",
     "pinia": "^3.0.2",
@@ -39,10 +41,14 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.14.0",
     "@tsconfig/node22": "^22.0.1",
+    "@types/cypress": "^0.1.6",
+    "@types/jest": "^29.5.14",
     "@types/jsdom": "^21.1.7",
     "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
-    "@types/node": "^22.14.1",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.15.3",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
     "@vitest/coverage-v8": "3.1.2",
