--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "serve": "vue-cli-service serve"
   },
   "dependencies": {
+    "@hcaptcha/vue3-hcaptcha": "^1.3.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@primeuix/themes": "^1.0.3",
     "@primevue/core": "^4.3.3",
