--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@hcaptcha/vue3-hcaptcha": "^1.3.0",
+    "@mapbox/mapbox-gl-directions": "^4.3.1",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@primeuix/themes": "^1.0.3",
     "@primevue/core": "^4.3.3",
