e2e tests for registerview and updated some packages

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "vue3-google-signin": "^2.1.1"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.14.0",
+    "@cypress/code-coverage": "^3.14.1",
     "@tsconfig/node22": "^22.0.1",
     "@types/cypress": "^0.1.6",
     "@types/jest": "^29.5.14",
@@ -64,13 +64,16 @@
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "babel-plugin-istanbul": "^7.0.0",
     "cypress": "^14.3.2",
     "eslint": "^9.25.1",
     "eslint-plugin-cypress": "^4.3.0",
     "eslint-plugin-vue": "~10.0.0",
+    "istanbul-lib-coverage": "^3.2.2",
     "jiti": "^2.4.2",
     "jsdom": "^26.1.0",
     "npm-run-all2": "^7.0.2",
+    "nyc": "^17.1.0",
     "prettier": "^3.5.3",
     "start-server-and-test": "^2.0.11",
     "typescript": "~5.8.3",
